@@ -8,3 +8,7 @@ Added Day object to use for holding data scraped from schedule page. Cleaned up 
 - 7/27/2024 -
 Completed schedule access. Program now accesses most recent schedule data instead of staying on current week.
 Ready to begin scraping data from PASSPort.
+
+- 8/5/2024 -
+Able to retrieve HTML source and print <main> HTML to terminal.
+Created new module to separate scraping from schedule retrieval and organize better.
